reserve multiple products
