# docs/swagger.yaml
@@ -44,6 +44,13 @@ definitions:
     properties:
       orderNumber:
         type: string
+      products:
+        items:
+          $ref: '#/definitions/handlers.ReserveRequestProduct'
+        type: array
+    type: object
+  handlers.ReserveRequestProduct:
+    properties:
       productId:
         type: string
       quantity:
@@ -54,7 +61,7 @@ definitions:
       orderNumber:
         type: string
     type: object
-host: localhost:8080
+host: localhost:3456
 info:
   contact: {}
   description: ECommerce Inventory Management System used to add, reserve, unreserve
